test/spec_vectors/memory_init64/fail/module_77.wat
(module (memory i64 1) (data "7") (func (export "test") (memory.init 0 (f64.const 1) (i64.const 1) (f32.const 1))))